# SakuraiSenrin

./: .env.dev  .env.prod  .env.template  .gitignore  LICENSE.md  README.md  README.zh_CN.md  bot.py  botConfig.py  config.py  costrule.py  pyproject.toml  requirements.txt
Achieve/: TextAppraisal.py
Achieve/Gal/: __init__.py
DataBase/HelpTXT/: ASTD.txt  AWHD.txt  SPIC.txt  WTER.txt
DataBase/Json/: studylib.json
Plugins/: Gal.py  Help.py  Info.py  Notices.py  PictureAppraisal.py  Study.py  TextAppraisal.py
Plugins/CovMisc/: CovClass.py  __init__.py
Plugins/Datalog/: Datalog.py  __init__.py  config.json
Plugins/Gal/: __init__.py
Plugins/Help/: __init__.py
Plugins/Info/: __init__.py  config.json
Plugins/Notices/: __init__.py
Plugins/PictureAppraisal/: __init__.py
Plugins/RandomEat/: HandleMeal.py  MealClass.py  __init__.py  menu.json
Plugins/RandomPic/: __init__.py
Plugins/SearchPic/: __init__.py  handle.py
Plugins/Setu/: __init__.py  config.json  config.py  handle_setu.py  misc.py
Plugins/Study/: StudyClass.py  __init__.py  reverse_lib
Plugins/Water/: WaterClass.py  __init__.py
Resources/HelpTXT/: AWHD.txt  HelpList.txt  INFO.txt  RGAL.txt  SETU.txt  WTER.txt
Resources/Json/: ban.json  datalog.json  picture_lib.json  wordbank.json
Resources/MeituTXT/: mp.txt  pc.txt  rand.txt  top.txt
Resources/db/: cov.db  menu.db  water.db
Utils/: Builder.py  CostumClass.py  CustomRule.py  CustumClass.py  ImageUtils.py  LimitUtils.py  MessageUtils.py  TimeUtils.py  TypeChecker.py  UserSettingUtils.py  __init__.py
src/cache/: __init__.py  (+1 more)
(+65 files in other folders)
