[project]
name = "sakuraisenrin"
version = "3.0.0"
description = "ðŸ¥° A powerful and cute QQ bot designed for galgame enthusiasts, powered by NoneBot2. ï½œ åŽŸæ¥ä½ ä¹ŸçŽ© GalGameï¼Ÿ"
readme = "README.md"
dependencies = [
    "asyncpg>=0.30.0",
    "cryptography>=44.0.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.5",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot2[fastapi]>=2.4.1",
    "picimagesearch>=3.11.4",
    "pil-utils>=0.1.12",
    "playwright>=1.49.1",
    "sqlalchemy>=2.0.37",
    "tenacity>=9.0.0",
]


[tool.uv]
index-url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
